--- a/style.css
+++ b/style.css
@@ -2,20 +2,34 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: "Quicksand", sans-serif;
 }
 		#header > div {
 			margin: 0 auto;
-			padding: 8px 0;
+			padding: 8px;
 			max-width: 960px;
 		}
 			#header > div > h1 {
 				margin: 0;
-				font: normal normal normal 32px / 1.25em "Quicksand", sans-serif;
+				font-size: 32px;
 			}
 	#main {
 		margin: 0 auto;
-		max-width: 960px;
 	}
+		#main > div {
+			margin: 0 auto;
+			padding: 8px;
+			max-width: 960px;
+			font-size: 32px;
+			line-height: 1em;
+		}
+			#main > div > a {
+				color: #0044CC;
+				text-decoration: none;
+			}
+			#main > div > a:hover {
+				text-decoration: underline;
+			}
 @media screen and (max-width: 480px) {
 		#header > div {
 			padding: 6px;
@@ -23,4 +37,8 @@ body {
 			#header > div > h1 {
 				font-size: 24px;
 			}
+		#main > div {
+			padding: 6px;
+			font-size: 24px;
+		}
 }
