--- a/style.css
+++ b/style.css
@@ -3,15 +3,25 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Quicksand", sans-serif;
+	background: #F5F5F5;
 }
+div {
+	box-sizing: border-box;
+}
+	#header {
+		background: #000D;
+	}
 		#header > div {
-			margin: 0 auto;
-			padding: 8px;
+			height: 3rem;
 			max-width: 960px;
+			margin: 0 auto;
+			padding: 0 1rem;
+			display: flex;
+			align-items: center;
 		}
 			#header > div > img {
 				display: block;
-				height: 36px;
+				height: 24px;
 				width: auto;
 			}
 	#main {
@@ -19,28 +29,31 @@ body {
 	}
 		#main > div {
 			margin: 0 auto;
-			padding: 8px;
+			padding: 1rem;
 			max-width: 960px;
-			font-size: 32px;
+			font-size: 125%;
 			line-height: 1em;
 		}
 			#main > div > a {
-				color: #0044CC;
+				display: block;
+				padding: 1rem;
+				color: #000D;
+				background: #FFF;
 				text-decoration: none;
 				outline: none;
+				border-bottom: 1px solid #0003;
 			}
 			#main > div > a:hover {
 				text-decoration: underline;
 			}
 @media screen and (max-width: 480px) {
 		#header > div {
-			padding: 6px;
+			padding: 0 6px;
 		}
 			#header > div > img {
-				height: 27px;
+				height: 18px;
 			}
 		#main > div {
-			padding: 6px;
 			font-size: 24px;
 		}
 }
