--- a/style.css
+++ b/style.css
@@ -48,12 +48,16 @@ div {
 			}
 @media screen and (max-width: 480px) {
 		#header > div {
-			padding: 0 6px;
+			padding: 0 0.5rem;
 		}
 			#header > div > img {
 				height: 18px;
 			}
 		#main > div {
-			font-size: 24px;
+			padding: 0.5rem;
+			font-size: 100%;
 		}
+			#main > div > a {
+				padding: 0.75rem 0.5rem;
+			}
 }
