--- a/style.css
+++ b/style.css
@@ -1,63 +1,54 @@
 @charset "UTF-8";
+html {
+	font-size: 14px;
+}
 body {
 	margin: 0;
 	padding: 0;
 	font-family: "Quicksand", sans-serif;
-	background: #F5F5F5;
 }
-div {
+div, a {
 	box-sizing: border-box;
 }
-	#header {
-		background: #000D;
-	}
-		#header > div {
-			height: 3rem;
-			max-width: 960px;
-			margin: 0 auto;
-			padding: 0 1rem;
-			display: flex;
-			align-items: center;
-		}
-			#header > div > img {
-				display: block;
-				height: 24px;
-				width: auto;
-			}
-	#main {
+a {
+	display: block;
+	color: unset;
+	text-decoration: none;
+}
+#header {
+	padding: 1rem 0 1rem;
+}
+	#header > img {
+		display: block;
+		height: 2rem;
 		margin: 0 auto;
 	}
-		#main > div {
-			margin: 0 auto;
-			padding: 1rem;
-			max-width: 960px;
-			font-size: 125%;
-			line-height: 1em;
-		}
-			#main > div > a {
-				display: block;
-				padding: 1rem;
-				color: #000D;
-				background: #FFF;
-				text-decoration: none;
-				outline: none;
-				border-bottom: 1px solid #0003;
-			}
-			#main > div > a:hover {
-				text-decoration: underline;
-			}
-@media screen and (max-width: 480px) {
-		#header > div {
-			padding: 0 0.5rem;
-		}
-			#header > div > img {
-				height: 18px;
-			}
-		#main > div {
-			padding: 0.5rem;
-			font-size: 100%;
-		}
-			#main > div > a {
-				padding: 0.75rem 0.5rem;
-			}
+#main {
+	max-width: 640px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+	#main > a {
+		width: calc(100vw - 0.5rem);
+		margin: 0 0 0.25rem;
+		padding: 0.5rem;
+		font-size: 1.25rem;
+		border-radius: 0.25rem;
+	}
+@media screen and (min-width: 480px) {
+	html {
+		font-size: 16px;
+	}
+}
+@media screen and (min-width: 640px) {
+	#main > a {
+		width: calc((640px - 0.75rem) / 2);
+	}
+	#main::after {
+		content: "";
+		display: block;
+		width: calc((640px - 0.75rem) / 2);
+	}
 }
