--- a/style.css
+++ b/style.css
@@ -1,54 +1,62 @@
 @charset "UTF-8";
 html {
-	font-size: 14px;
+  font-family: 'Quicksand', sans-serif;
 }
-body {
-	margin: 0;
-	padding: 0;
-	font-family: "Quicksand", sans-serif;
+
+/* Header */
+header {
+  border-bottom: 1px solid #0001;
 }
-div, a {
-	box-sizing: border-box;
+header > div {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 1rem;
 }
-a {
-	display: block;
-	color: unset;
-	text-decoration: none;
+header > div > h1 {
+  font-size: 1.5rem;
 }
-#header {
-	padding: 1rem 0 1rem;
+
+/* Main */
+main {}
+main > h2 {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 1rem;
+  font-size: 1.375rem;
 }
-	#header > img {
-		display: block;
-		height: 2rem;
-		margin: 0 auto;
-	}
-#main {
-	max-width: 640px;
-	margin: 0 auto;
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
+main > div {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-gap: 1rem;
 }
-	#main > a {
-		width: calc(100vw - 0.5rem);
-		margin: 0 0 0.25rem;
-		padding: 0.5rem;
-		font-size: 1.25rem;
-		border-radius: 0.25rem;
-	}
-@media screen and (min-width: 480px) {
-	html {
-		font-size: 16px;
-	}
+main > div > a {
+  display: block;
+  padding: 1rem;
+  border: 1px solid #0001;
+  border-radius: 1rem;
+  transition-duration: 200ms;
 }
-@media screen and (min-width: 640px) {
-	#main > a {
-		width: calc((640px - 0.75rem) / 2);
-	}
-	#main::after {
-		content: "";
-		display: block;
-		width: calc((640px - 0.75rem) / 2);
-	}
+main > div > a:hover {
+  border-color: #0005;
+}
+main > div > a > img {
+  height: 128px;
+  margin: 0 auto 1rem;
+}
+main > div > a > h3 {
+  margin: 0 0 1rem;
+  font-size: 1.25rem;
+  text-align: center;
+}
+main > div > a > div {
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
 }
