--- a/style.css
+++ b/style.css
@@ -1,66 +1,81 @@
 @charset "UTF-8";
 html {
+  color: #000C;
+  background: #EEE;
+}
+h1, h2, h3 {
   font-family: 'Quicksand', sans-serif;
 }
 
-/* Header */
 header {
-  border-bottom: 1px solid #0001;
+  background: #FFF;
 }
-header > div {
+header > div, main > div {
   max-width: 1440px;
   margin: 0 auto;
   padding: 1rem;
 }
 header > div > h1 {
-  font-size: 1.5rem;
-}
-
-/* Main */
-main {
-  margin: 1rem 0;
-}
-main > h2 {
-  max-width: 1440px;
-  margin: 1rem auto;
-  padding: 0 1rem;
+  color: #000A;
   font-size: 1.375rem;
 }
-main > div {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 1rem;
+main > div > div {
+  margin-bottom: 1rem;
+}
+main > div > div:nth-of-type(2n + 1) > h2 {
+  color: #000A;
+  font-size: 1.25rem;
+}
+main > div > div:nth-of-type(2n) {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 1rem;
 }
-main > div > a {
+main > div > div:nth-of-type(2n):last-of-type {
+  margin-bottom: 0;
+}
+main > div > div:nth-of-type(2n) > a {
+  padding: 0.75rem;
   display: block;
-  padding: 1rem;
-  border: 1px solid #0001;
-  border-radius: 1rem;
-  transition-property: border;
+  background: #FFF;
+  border: 0.25rem solid #FFF;
   transition-duration: 200ms;
 }
-main > div > a:hover {
-  border-color: #0005;
+main > div > div:nth-of-type(2n) > a:hover {
+  border-color: #2196F3;
 }
-main > div > a > img {
+main > div > div:nth-of-type(2n) > a > img {
   height: 128px;
   margin: 0 auto 1rem;
 }
-main > div > a > h3 {
-  margin: 0 0 1rem;
-  font-size: 1.25rem;
+main > div > div:nth-of-type(2n) > a > h3 {
+  margin-bottom: 1rem;
+  font-size: 1.125rem;
   text-align: center;
 }
-main > div > a > div {
+main > div > div:nth-of-type(2n) > a > p {
   text-align: center;
-  line-height: 1.5;
+  word-wrap: break-word;
 }
 
 @media (max-width: 960px) {
   html {
     font-size: 14px;
+  }
+  header {
+    padding: 0.5rem 0.5rem 0;
+    background: transparent;
+  }
+  header > div {
+    background: #FFF;
+  }
+  main > div {
+    padding: 0.5rem;
+  }
+  main > div > div {
+    margin-bottom: 0.5rem;
+  }
+  main > div > div:nth-of-type(2n + 1) {
+    padding: 0.5rem 0;
   }
 }
