--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1, h2, h3 {
 
 header {
   background: #FFF;
+  border-bottom: 1px solid #0002;
 }
 header > div, main > div {
   max-width: 1440px;
@@ -35,14 +36,13 @@ main > div > div:nth-of-type(2n):last-of-type {
   margin-bottom: 0;
 }
 main > div > div:nth-of-type(2n) > a {
-  padding: 0.75rem;
+  padding: 1rem;
   display: block;
   background: #FFF;
-  border: 0.25rem solid #FFF;
-  transition-duration: 200ms;
+  border: 1px solid #0002;
 }
 main > div > div:nth-of-type(2n) > a:hover {
-  border-color: #2196F3;
+  background: #FAFAFA;
 }
 main > div > div:nth-of-type(2n) > a > img {
   height: 128px;
@@ -54,6 +54,7 @@ main > div > div:nth-of-type(2n) > a > h3 {
   text-align: center;
 }
 main > div > div:nth-of-type(2n) > a > p {
+  line-height: 1.375;
   text-align: center;
   word-wrap: break-word;
 }
