--- a/style.css
+++ b/style.css
@@ -66,9 +66,11 @@ main > div > div:nth-of-type(2n) > a > p {
   header {
     padding: 0.5rem 0.5rem 0;
     background: transparent;
+    border: none;
   }
   header > div {
     background: #FFF;
+    border: 1px solid #0002;
   }
   main > div {
     padding: 0.5rem;
